--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,22 @@
 
 UNRELEASED:
 
+Version: 3.62.0, Date: 2019-11-19
+- Updated translations
+- Changed all references from MyAdBlock to Premium
+- Updated references to deprecated extension APIs
+- Fixed an issue with the 'Update' button on the Filter List tab of the AdBlock Options page
+- Fixed an error with `isNaN` usage when processing ping server responses
+- Added meta tags to all extension HTML documents
+- Fixed an issue when un-subscribing to EasyList on the Filter List tab of the AdBlock Options page
+- Updated the Premium Sync options page
+- Fixed the YouTube channel whitelisting feature
+- Removed the 'MyAdBlock' options menu item in the AdBlock popup menu
+
+Version: 3.61.1, Date: 2019-11-08
+- Updated translations
+- Updated the extension name and short description
+
 Version: 3.61.0, Date: 2019-11-06
 - Updated translations
 - Updated the extension name and short description
